// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flamegraph titles for diffs should correctly render canvas title 1`] = `
"child1 
Samples: 1
Cycles: 50
Percentage of root frame: 50.00%
Diff: +30.00%"
`;

exports[`flamegraph titles for diffs should correctly render canvas title 2`] = `
"child2 
Samples: 1
Cycles: 25
Percentage of root frame: 25.00%
Diff: +20.00%"
`;

exports[`flamegraph titles for diffs should correctly render canvas title 3`] = `
"child3  (inlined)
Samples: 1
Cycles: 2
Percentage of root frame: 2.00%
Diff: -3.00%"
`;

exports[`flamegraph titles for diffs should correctly render canvas title 4`] = `
"child4 @[kernel]
Samples: 1
Cycles: 2
Percentage of root frame: 2.00%
Diff: -3.00%"
`;

exports[`flamegraph titles for diffs should correctly render canvas title 5`] = `
"child2 
Samples: 1
Cycles: 25
Percentage of root frame: 25.00%
Percentage of selected frame: 50.00%
Diff: +25.00%"
`;

exports[`flamegraph titles for diffs should correctly render status title 1`] = `"child1  (50 cycles, 1 samples, 50.00%, +30.00%)"`;

exports[`flamegraph titles for diffs should correctly render status title 2`] = `"child2  (25 cycles, 1 samples, 25.00%, +20.00%)"`;

exports[`flamegraph titles for diffs should correctly render status title 3`] = `
"child3  (inlined)
Samples: 1
Cycles: 2
Percentage of root frame: 2.00%
Diff: -3.00%"
`;

exports[`flamegraph titles for diffs should correctly render status title 4`] = `
"child4 @[kernel]
Samples: 1
Cycles: 2
Percentage of root frame: 2.00%
Diff: -3.00%"
`;

exports[`flamegraph titles for diffs should correctly render status title 5`] = `"child2  (25 cycles, 1 samples, 25.00%/50.00%, +25.00%)"`;

exports[`flamegraph titles should correctly render canvas title 1`] = `
"child1 
Samples: 1
Cycles: 50
Percentage of root frame: 50.00%"
`;

exports[`flamegraph titles should correctly render canvas title 2`] = `
"child2 
Samples: 1
Cycles: 25
Percentage of root frame: 25.00%"
`;

exports[`flamegraph titles should correctly render canvas title 3`] = `
"child3  (inlined)
Samples: 1
Cycles: 2
Percentage of root frame: 2.00%"
`;

exports[`flamegraph titles should correctly render canvas title 4`] = `
"child4 @[kernel]
Samples: 1
Cycles: 2
Percentage of root frame: 2.00%"
`;

exports[`flamegraph titles should correctly render canvas title 5`] = `
"child2 
Samples: 1
Cycles: 25
Percentage of root frame: 25.00%
Percentage of selected frame: 50.00%"
`;

exports[`flamegraph titles should correctly render status title 1`] = `"child1  (50 cycles, 1 samples, 50.00%)"`;

exports[`flamegraph titles should correctly render status title 2`] = `"child2  (25 cycles, 1 samples, 25.00%)"`;

exports[`flamegraph titles should correctly render status title 3`] = `
"child3  (inlined)
Samples: 1
Cycles: 2
Percentage of root frame: 2.00%"
`;

exports[`flamegraph titles should correctly render status title 4`] = `
"child4 @[kernel]
Samples: 1
Cycles: 2
Percentage of root frame: 2.00%"
`;

exports[`flamegraph titles should correctly render status title 5`] = `"child2  (25 cycles, 1 samples, 25.00%/50.00%)"`;
